malloc e free ora sono disastrOS_syscalls

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
         "stdlib.h": "c",
         "disastros_syscalls.h": "c",
         "buddy_allocator.h": "c",
-        "disastros_timer.h": "c"
+        "disastros_timer.h": "c",
+        "disastros.h": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
